Refactored to remove duplicated code and cleaned up warnings for unused imports and deprecated methods.
Normalize provider use for EC key pairs.

Move common key selector code into an abstract super class.

Remove unused imports.

Removed used of deprecated constructors and methods.

CMS signing improvements and fixed typo.

Remove unncessary storePassphraseAction.setEnabled call.

Remove duplicate download and view code.